Quorum/Library/Tests/Actions/Pass/Return2ActionsTextToVar.quorum
class Main
    action Main
        text a = ""
        text x = ""
        x = bar(foo(a))
        output x
    end

    action foo (text a) returns text
        a = a + "foo"
        return a
    end

    action bar(text a) returns text
        a = a + "bar"
        return a
    end
end