Quorum/Library/Tests/Actions/Fail/HOCReturnIntFromMainDeclared.quorum
action Main
    text a = B()
    return 3
end

action B
end